# e621-metadata-extractor

./: .gitignore  README.md  config.json  main.py  pyproject.toml  requirements.txt
e621_metadata_extractor/: extractor.py  fetcher.py  utils.py
